<resources>
    <string name="app_name">login</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Identifiers -->
    <string name="com_auth0_scheme">app</string>

    <!-- Settings -->
    <string name="login_scopes">openid profile email read:current_user update:current_user_metadata</string>
    <string name="login_audience">https://%1$s/api/v2/</string>


    <!--
        Main activity
        =============
        -->

    <!-- Title -->
    <string name="initial_title">Welcome to the app!</string>
    <string name="logged_in_title">You\'re logged in.</string>
    <string name="logged_out_title">You\'re logged out.</string>

    <!-- "Log in" and "Log out" buttons -->
    <string name="button_login">Log in</string>
    <string name="button_logout">Log out</string>

    <!-- User profile -->
    <string name="user_profile">
        Name: %1$s\n
        Email: %2$s
    </string>

    <!-- Metadata -->
    <string name="textview_metadata_heading">Metadata</string>
    <string name="textview_metadata_info">Use the text box and buttons below to get and set the \'country\' field in the user\'s metadata.</string>

    <!-- "Get" and "Set" buttons -->
    <string name="button_get">Get</string>
    <string name="button_set">Set</string>

    <!-- SnackBar messages-->
    <string name="login_success_message">Successfully logged in! %1$s</string>
    <string name="login_failure_message">Failed to log in. %1$s</string>
    <string name="general_failure_with_exception_code">Failed - exception code: %1$s</string>
    <string name="general_success_message">Success!</string>
    <string name="log_out">Log out</string>


    <!-- Barre de navigation -->
    <string name="bottom_map_item">Carte</string>
    <string name="bottom_account_item">Compte</string>
    <string name="bottom_trash_item">Tri</string>
    <string name="bottom_eco_item">Eco</string>
    <string name="bottom_other_item">Autre</string>


    <string name="scan1">Scannez un code/ticket</string>
    <string name="scan_qr">Scannez le barcode/QR code</string>
    <string name="enter_ticket_number">Entrer le numéro de ticket manuellement</string>
    <string name="numero_ticket">Numero de ticket</string>
    <string name="TextView_enterTicket">Entrez les informations de votre ticket</string>
    <string name="ticketTec">Sélectionnez le service de transports en communs utilisé</string>
    <string name="send_ticket">Entrer le ticket</string>
    <string name="vos_points_ont_bien_t_rajout_s_votre_compte">Vos points ont bien été rajoutés à votre compte</string>
    <string name="continuer">Continuer</string>

    <string-array name="tec_array">
        <item>SNCB</item>
        <item>TEC</item>
        <item>STIB</item>
        <item>De Lijn</item>
    </string-array>

    <!-- popup window et page de detail-->
    <string name="description_depot">Description du dépôt</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ullamcorper accumsan porta. Nulla facilisi.</string>
    <string name="nom_depot">Nom du dépots</string>
    <string name="test_depot">test depot</string>
    <string name="legende_photo_de_depot">photo_du_depot</string>
    <string name="close_button">close_button</string>
    <string name="editText_rubish_name">indiquer ici le titre du depot</string>
    <string name="editText_rubish_descritpion">décriver ici de depot</string>
    <string name="image_button_label">Charger Image</string>
    <string name="collecte_image_description">Collecte_image</string>
    <string name="button_cancel">annuler</string>
    <string name="label_spinner_rubish_amount">Quantitée de déchet</string>
    <string name="send_form_rubish_button_label">Enregister le Dépôt sauvage</string>
    <string name="Rubish_creation_form_image_desciption">photo(s) du depot</string>

    <!-- strings profile -->

    <string name="profile_historique">Historique</string>
    <string name="profile_parametre">Paramètres</string>
    <string name="profile_supprimer">Supprimer le compte</string>
    <string name="moderator_alerts">Alertes Modération</string>
    <string name="moderator_switch">Mode Modérateur</string>


    <string name="setting_changename">Changer le nom</string>
    <string name="setting_image">Changer d\'image de profil</string>


    <string name="historique">Historique</string>
    <string name="history_action">Action:</string>

    <string name="history_date">Date</string>
    <string name="history_points">Points récoltés</string>
    <string name="report_button">report button</string>


    <string name="history_date">Date:</string>
    <string name="history_points">Points récoltés:</string>
    <string name="entrer_votre_ticket_de_transport_en_commun_valide_et_vous_recevrez_des_points_d_penser">Entrer votre ticket de transport en commun valide et vous recevrez des points à dépenser !</string>

    <string name="location">Endroit de l\'action :</string>


</resources>