<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/connection"
        android:title="@string/bottom_account_item"
        android:icon="@drawable/ic_account" />
    <item
        android:id="@+id/connection"
        android:title="@string/bottom_trash_item"
        android:icon="@drawable/ic_trash" />
    <item
        android:id="@+id/map"
        android:title="@string/bottom_map_item"
        android:icon="@drawable/ic_map" />
    <item
        android:id="@+id/connection"
        android:title="@string/bottom_eco_item"
        android:icon="@drawable/ic_eco" />
    <item
        android:id="@+id/connection"
        android:title="@string/bottom_trash_item"
        android:icon="@drawable/ic_trash" />
    <item
        android:id="@+id/connection"
        android:title="@string/bottom_other_item"
        android:icon="@drawable/ic_other" />
</menu>