<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/item_margin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/upload"
        android:text="@string/button_cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rubish_creation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_depot"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/rubish_creation_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editText_rubish_name"
        app:layout_constraintStart_toStartOf="@+id/rubish_creation_title"
        app:layout_constraintTop_toBottomOf="@+id/rubish_creation_title" />

    <TextView
        android:id="@+id/rubish_creation_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_depot"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/rubish_creation_title_input"
        app:layout_constraintTop_toBottomOf="@+id/rubish_creation_title_input" />

    <EditText
        android:id="@+id/rubish_creation_description_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editText_rubish_descritpion"
        app:layout_constraintStart_toStartOf="@+id/rubish_creation_description"
        app:layout_constraintTop_toBottomOf="@+id/rubish_creation_description" />

    <TextView
        android:id="@+id/label_spinner_rubish_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_spinner_rubish_amount"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rubish_creation_description_input" />

    <Spinner
        android:id="@+id/spinner_amount_rubish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/label_spinner_rubish_amount"
        app:layout_constraintTop_toBottomOf="@+id/rubish_creation_description_input" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinner_amount_rubish"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/rubish_upload_button"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/upload"
            android:padding="15dp"
            android:text="@string/image_button_label"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/Rubish_preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/blc" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_rubish_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/upload"
        android:text="@string/send_form_rubish_button_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>