<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/page_rubish_description">

    <androidx.cardview.widget.CardView
        android:id="@+id/maps_image"
        android:layout_width="80dp"
        android:layout_height="80dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/rubish_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/legende_photo_de_depot">

        </ImageView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/rubish_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nom_depot"
        app:layout_constraintBottom_toBottomOf="@+id/maps_image"
        app:layout_constraintStart_toEndOf="@+id/maps_image"
        app:layout_constraintTop_toTopOf="@+id/maps_image">

    </TextView>

    <TextView
        android:id="@+id/rubish_title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/nom_depot"
        app:layout_constraintBottom_toBottomOf="@+id/maps_image"
        app:layout_constraintStart_toEndOf="@+id/maps_image"
        app:layout_constraintTop_toBottomOf="@+id/rubish_title">

    </TextView>

    <ImageView
        android:id="@+id/close_rubish_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/rubish_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rubish_title"
        android:layout_marginEnd="@dimen/default_popup_padding"
        android:contentDescription="@string/close_button">

    </ImageView>

    <TextView
        android:id="@+id/rubish_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/description_depot"
        app:layout_constraintStart_toStartOf="@+id/maps_image"
        app:layout_constraintTop_toBottomOf="@+id/maps_image">

    </TextView>

    <TextView
        android:id="@+id/rubish_description_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/lorem_ipsum"
        app:layout_constraintStart_toStartOf="@+id/rubish_description_title"
        app:layout_constraintTop_toBottomOf="@+id/rubish_description_title">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>