<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/profile_pic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/kanit"
        android:text="Cedric De Dryver"
        android:textSize="27dp"

        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/profile_point_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit"
        android:text="Points :"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/profile_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit"
        android:text="0"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
        app:layout_constraintStart_toEndOf="@+id/profile_point_title"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/profile_sidebar"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/profile_btn_historique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kanit"
        android:text="@string/profile_historique"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_sidebar" />

    <View
        android:id="@+id/profile_sidebar2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn_historique"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/profile_btn_parametre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit"
        android:text="@string/profile_parametre"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_sidebar2" />

    <View
        android:id="@+id/profile_sidebar3"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn_parametre"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/supp_btn_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit"
        android:text="@string/profile_supprimer"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_sidebar3" />

    <View
        android:id="@+id/moderator_sidebar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/supp_btn_user"
        tools:layout_editor_absoluteX="-26dp" />

    <Button
        android:id="@+id/moderator_btn_activity"
        android:visibility="invisible"
        android:layout_width="377dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/kanit"
        android:text="@string/moderator_alerts"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moderator_sidebar" />

</androidx.constraintlayout.widget.ConstraintLayout>